--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,122 @@
+/* Reset and base styles  */
+* {
+  padding: 0px;
+  margin: 0px;
+  border: none;
+}
+
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+:focus,
+:active {
+  /*outline: none;*/
+}
+
+a:focus,
+a:active {
+  /* outline: none;*/
+}
+
+/* Links */
+a,
+a:link,
+a:visited {
+  /* color: inherit; */
+  text-decoration: none;
+  /* display: inline-block; */
+}
+
+a:hover {
+  /* color: inherit; */
+  text-decoration: none;
+}
+
+/* Common */
+aside,
+nav,
+footer,
+header,
+section,
+main {
+  display: block;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-size: inherit;
+  font-weight: inherit;
+}
+
+ul,
+ul li {
+  list-style: none;
+}
+
+img {
+  vertical-align: top;
+}
+
+img,
+svg {
+  max-width: 100%;
+  height: auto;
+}
+
+/* Form */
+input,
+textarea,
+button,
+select {
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  background-color: transparent;
+}
+
+input::-ms-clear {
+  display: none;
+}
+
+button,
+input[type=submit] {
+  display: inline-block;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background-color: transparent;
+  background: none;
+  cursor: pointer;
+}
+
+input:focus,
+input:active,
+button:focus,
+button:active {
+  outline: none;
+}
+
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+label {
+  cursor: pointer;
+}
+
+legend {
+  display: block;
+}
+
 body {
   height: 100%;
   line-height: 1;
@@ -13,7 +132,7 @@ body {
 }
 
 .container {
-  max-width: 1046px;
+  max-width: 960px;
   margin: 0 auto;
   padding: 0 15px;
   -webkit-box-sizing: content-box;
@@ -22,17 +141,24 @@ body {
 
 .star__pic {
   padding: 30px;
-  text-align: center;
-  border: 1px solid black;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
 }
 .star__img {
   background: url(../img/star0.png) no-repeat;
   width: 80px;
   height: 85px;
-  display: inline-block;
 }
-.star__img:hover ~ .star__img:nth-child(-n+1), .star__img:hover ~ .star__img:nth-child(-n+2), .star__img:hover ~ .star__img:nth-child(-n+3), .star__img:hover ~ .star__img:nth-child(-n+4), .star__img:hover ~ .star__img:nth-child(-n+5), .star__img:hover ~ .star__img:nth-child(-n+6), .star__img:hover ~ .star__img:nth-child(-n+7), .star__img:hover ~ .star__img:nth-child(-n+8) {
+.star__img:hover, .star__img:hover ~ .star__img:nth-child(-n+1), .star__img:hover ~ .star__img:nth-child(-n+2), .star__img:hover ~ .star__img:nth-child(-n+3), .star__img:hover ~ .star__img:nth-child(-n+4), .star__img:hover ~ .star__img:nth-child(-n+5), .star__img:hover ~ .star__img:nth-child(-n+6), .star__img:hover ~ .star__img:nth-child(-n+7), .star__img:hover ~ .star__img:nth-child(-n+8) {
   background: url(../img/star1.png) no-repeat;
   width: 80px;
   height: 85px;
